# Deepfake-Cryptographic-Shield-provance-Authenticator

./: .gitignore  README.md  main.py  requirements.txt  simulate_calls.py
core/: audio_interceptor.py  crypto_verifier.py  ml_analyzer.py  trust_engine.py
simulator_web/: index.html  package-lock.json  package.json  tailwind.config.js
simulator_web/src/: App.jsx  index.css
simulator_web/src/components/: About.jsx  Contact.jsx  Home.jsx  Simulator.jsx  Solution.jsx  Vision.jsx
ui_dashboard/: package.json
ui_dashboard/src/: App.jsx
virtual_audio_cable/: Cargo.toml
virtual_audio_cable/src/: main.rs
